--- a/package.json
+++ b/package.json
@@ -1,19 +1,37 @@
 {
   "name": "nextjs-clone-youtube",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "next": "12.0.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "@material-ui/core": "4.11.2",
+    "@material-ui/icons": "4.11.2",
+    "aws-sdk": "2.815.0",
+    "crypto": "1.0.1",
+    "dayjs": "1.9.7",
+    "mongodb": "3.6.3",
+    "multer": "1.4.2",
+    "multer-s3": "2.9.0",
+    "next": "10.0.3",
+    "next-auth": "3.1.0",
+    "next-connect": "0.9.1",
+    "nprogress": "0.2.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
   },
   "devDependencies": {
-    "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10"
+    "eslint": "7.15.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-prettier": "7.0.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "3.3.0",
+    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "prettier": "2.2.1"
   }
 }
